# lsp.leek

./: .gitignore  Cargo.toml  README.md
leek-lsp/: Cargo.toml
leek-lsp/src/: doc.rs  error.rs  main.rs  vfs.rs  workspace.rs
leek-lsp/src/lsp/: mod.rs  structs.rs
leek-parser/: Cargo.toml
leek-parser/src/: ast.rs  leekscript.pest  lib.rs
