[package]
name = "leek-lsp"
version = "0.1.0"
authors = ["Arthur Correnson <arthur.correnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "15.1"
jsonrpc-derive = "15.1"
jsonrpc-stdio-server = "15.1"
serde = "1.0"
serde_derive = "1.0"