[package]
name = "leek-lsp"
version = "0.1.0"
authors = ["Arthur Correnson <arthur.correnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
leek-parser = { path = "../leek-parser" }
url = "2.2"
tower = "0.3"
tower-lsp = "0.13"
tokio = { version = "0.2", features=["full"] }